<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/EtName"
        android:layout_width="411dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtID"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/EtAddress"
        android:layout_width="408dp"
        android:layout_height="55dp"
        android:layout_marginStart="2dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/EtConNo"
        android:layout_width="405dp"
        android:layout_height="64dp"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:hint="@string/contact_no"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtAddress"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/EtID"
        android:layout_width="408dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/update"
        app:layout_constraintBaseline_toBaselineOf="@+id/deleteBtn"
        app:layout_constraintEnd_toStartOf="@+id/deleteBtn" />

    <Button
        android:id="@+id/showBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/show"
        app:layout_constraintBaseline_toBaselineOf="@+id/updateBtn"
        app:layout_constraintEnd_toStartOf="@+id/updateBtn"
        app:layout_constraintStart_toEndOf="@+id/saveBtn" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="14dp"
        android:text="@string/save"
        app:layout_constraintBaseline_toBaselineOf="@+id/showBtn"
        app:layout_constraintEnd_toStartOf="@+id/showBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />
</androidx.constraintlayout.widget.ConstraintLayout>